<resources>
    <string name="app_name">ICMS</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="consist_verification">Consist Verification</string>
    <string name="drawer_open">Open drawer</string>
    <string name="drawer_close">Close drawer</string>
    <string name="log_out">Log Out</string>
    <string name="arrival">Arrival</string>
    <string name="departure">Departure</string>
    <string name="trains">Trains</string>
    <string name="serial_no">Serial No:</string>
    <string name="coach_type">Coach Type:</string>
    <string name="coach_no">Coach No:</string>
    <string name="dispute">Dispute:</string>
    <string name="owning_railway">Owning Railway:</string>
    <string name="from">From:</string>
    <string name="to">To:</string>
    <string name="prs_id">PRS ID:</string>
    <string name="remark">Remark:</string>
    <string name="reverse">Reverse</string>
    <string name="verify">Verify</string>
    <string name="line_type">Line Type:</string>
    <string name="line">Line:</string>
    <string name="end">End:</string>
    <string name="capacity">Capacity:</string>
    <string name="hyphen">-</string>
    <string name="coaches_on_line">Coaches on line:</string>
    <string name="available_space">Available Space:</string>
    <string name="confirm_arrival">Confirm</string>
    <string name="none">None</string>
    <string name="specify_details">Please specify all line details!</string>
    <string name="empty_username">Please enter a username to log in.</string>
    <string name="empty_password">Please enter a password to log in.</string>
    <string name="empty_username_password">Please enter a username and password to log in.</string>
    <string name="invalid_username">The username entered is invalid!</string>
    <string name="incorrect_password">The password entered is incorrect!</string>
    <string name="login_successful">Login successful!</string>
    <string name="no_sufficient_space">Insufficient space! Please select another line.</string>
    <string name="d">D:</string>
    <string name="dep">Dep:</string>
    <string name="arr">Arr:</string>
    <string name="rake_movement">Rake Movement to Yard</string>
    <string name="sick_marking">Sick Marking</string>
    <string name="shop_marking">Shop Marking</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="send">Send</string>
    <string name="receive">Receive</string>
    <string name="move_to">Move To:</string>
    <string name="station">Station</string>
    <string name="yard">Yard</string>
    <string name="select_station">Select Station:</string>
    <string name="movement_time">Movement Time:</string>
    <string name="movement_date">Movement Date:</string>
    <string name="consist_details">Consist Details:</string>
    <string name="send_rake_to_yard">Send Rake to Yard</string>
    <string name="confirm">Confirm</string>
    <string name="show_consist_details">Show Consist Details</string>
    <string name="hide_consist_details">Hide Consist Details</string>
    <string name="select_yard">Select Yard:</string>
    <string name="please_select_station">Please select station or yard!</string>
    <string name="rake_movement_successful">Rake movement successfully done!</string>
    <string name="coach_status">Coach Status:</string>
    <string name="train_details">Train Details:</string>
    <string name="poh_due_date">POH Due Date:</string>
    <string name="last_event">Last Event:</string>
    <string name="sick_department">Sick Department:</string>
    <string name="marking_date">Marking Date:</string>
    <string name="sick_mark_successful">Sick marking successful!</string>
    <string name="fill_required_details">Please fill in all required details!</string>
    <string name="base_depot">Base Depot:</string>
    <string name="built_year">Built Year:</string>
    <string name="poh_year">POH Year:</string>
    <string name="poh_month">POH Month:</string>
    <string name="coaches">Coaches:</string>
    <string name="shop_reason">Shop Reason:</string>
    <string name="shop">Shop:</string>
    <string name="shop_mark_successful">Shop marking successful!</string>
    <string name="status">Status:</string>
    <string name="receive_rake">Receive Rake</string>
    <string name="login_failed">Login failed! Please check your internet connection or try again later.</string>
    <string name="attempting_login">Logging in&#8230; please wait!</string>
    <string name="shared_preferences">SharedPreferences</string>
    <string name="logged_in">loggedIn</string>
    <string name="service_id">serviceID</string>
    <string name="log_out_confirmation">Are you sure you want to log out?</string>
    <string name="logging_out">Logging out&#8230; please wait!</string>
    <string name="logout_failed">Log out failed! Please check your internet connection or try again later.</string>
    <string name="retry">Retry</string>
    <string name="no_internet">No Internet Connection</string>
    <string name="no_internet_message">You need to be connected to the internet to use this app.</string>
    <string name="cannot_connect">Cannot connect to server</string>
    <string name="connection_failed">Please check your internet connection or try again later.</string>
    <string name="server_error">An error occurred while connecting to the server.</string>
    <string name="loading_trains">Loading Trains&#8230; please wait!</string>
    <string name="select_picture">Select Picture:</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="refresh_token">refreshToken</string>
    <string name="login_time">loginTime</string>
    <string name="error_occurred">An error has occurred. Please try again later.</string>
    <string name="line_details">Line Details</string>
    <string name="loading_consist">Loading Consist&#8230; please wait!</string>
</resources>
