<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="12dp"
    android:paddingBottom="12dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_type"
            android:alpha="0.54"
            android:tint="@color/white"
            android:layout_marginRight="32dp"
            android:layout_marginEnd="32dp"/>

        <TextView
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/line_type"
            android:textSize="@dimen/typography_title"
            android:textColor="@color/white"
            android:fontFamily="sans-serif-medium"/>

        <Spinner
            android:id="@+id/line_type_spinner"
            android:layout_weight="0"
            android:gravity="end|right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">
        
        <ImageView
            android:layout_weight="0"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_track"
            android:tint="@color/white"
            android:alpha="0.54"
            android:layout_marginRight="32dp"
            android:layout_marginEnd="32dp"/>

        <TextView
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/line"
            android:textSize="@dimen/typography_title"
            android:textColor="@color/white"
            android:fontFamily="sans-serif-medium"/>

        <Spinner
            android:id="@+id/line_spinner"
            android:layout_weight="0"
            android:gravity="end|right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_end"
            android:tint="@color/white"
            android:alpha="0.54"
            android:layout_marginRight="32dp"
            android:layout_marginEnd="32dp"/>

        <TextView
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/end"
            android:textSize="@dimen/typography_title"
            android:textColor="@color/white"
            android:fontFamily="sans-serif-medium"/>

        <Spinner
            android:id="@+id/end_spinner"
            android:layout_weight="0"
            android:gravity="end|right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="4dp"
        android:id="@+id/line_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_vertical">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_details"
                android:tint="@color/white"
                android:alpha="0.54"
                android:layout_marginRight="32dp"
                android:layout_marginEnd="32dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/line_details"
                android:textSize="@dimen/typography_title"
                android:textColor="@color/white"
                android:fontFamily="sans-serif-medium"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="56dp"
            android:layout_marginLeft="56dp">

            <TextView
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/typography_subheading"
                android:fontFamily="sans-serif-medium"
                android:text="@string/capacity"/>

            <TextView
                android:id="@+id/capacity_text_view"
                android:layout_weight="0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/typography_subheading"
                android:text="@string/hyphen"/>

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="56dp"
            android:layout_marginLeft="56dp">

            <TextView
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/typography_subheading"
                android:fontFamily="sans-serif-medium"
                android:text="@string/coaches_on_line"/>

            <TextView
                android:id="@+id/coaches_on_line_text_view"
                android:layout_weight="0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/typography_subheading"
                android:text="@string/hyphen"/>

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="12dp"
            android:layout_marginStart="56dp"
            android:layout_marginLeft="56dp">

            <TextView
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/typography_subheading"
                android:fontFamily="sans-serif-medium"
                android:text="@string/available_space"/>

            <TextView
                android:id="@+id/available_space_text_view"
                android:layout_weight="0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/typography_subheading"
                android:text="@string/hyphen"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>