<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp"
        android:background="?attr/selectableItemBackground">

        <LinearLayout
            android:baselineAligned="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="top">

            <LinearLayout
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginRight="8dp"
                android:layout_marginEnd="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/serial_no"
                    android:textSize="15sp"
                    android:fontFamily="sans-serif-medium"
                    android:textColor="@color/white"/>

                <TextView
                    android:id="@+id/serial_no_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="Srl No"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:textSize="14sp"
                    android:textColor="#404040"
                    android:layout_marginRight="8dp"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/rounded_grey_bg"/>

            </LinearLayout>

            <LinearLayout
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginRight="8dp"
                android:layout_marginEnd="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/coach_type"
                    android:textSize="15sp"
                    android:fontFamily="sans-serif-medium"
                    android:textColor="@color/white"/>

                <TextView
                    android:id="@+id/coach_type_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="Coach Type"
                    android:textSize="14sp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginRight="4dp"
                android:layout_marginEnd="4dp"
                android:gravity="end|right">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/coach_no"
                    android:textSize="15sp"
                    android:fontFamily="sans-serif-medium"
                    android:textColor="@color/white"/>

                <TextView
                    android:id="@+id/coach_no_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="Coach No"
                    android:textSize="14sp"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="top">

            <LinearLayout
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginRight="4dp"
                android:layout_marginEnd="4dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/owning_railway"
                    android:textSize="15sp"
                    android:fontFamily="sans-serif-medium"
                    android:textColor="@color/white"/>

                <TextView
                    android:id="@+id/own_rly_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="Own Rly"
                    android:textSize="14sp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginRight="4dp"
                android:layout_marginEnd="4dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/prs_id"
                    android:textSize="15sp"
                    android:fontFamily="sans-serif-medium"
                    android:textColor="@color/white"/>
                <TextView
                    android:id="@+id/prs_id_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="PRS ID"
                    android:textSize="14sp"/>

            </LinearLayout>

            <TableLayout
                android:layout_weight="0"
                android:gravity="right|end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TableRow>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/from"
                        android:textSize="15sp"
                        android:gravity="right|end"
                        android:layout_marginRight="4dp"
                        android:layout_marginEnd="4dp"
                        android:fontFamily="sans-serif-medium"
                        android:textColor="@color/white"/>

                    <TextView
                        android:gravity="center"
                        android:id="@+id/from_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="Source"
                        android:textSize="14sp"
                        android:paddingLeft="6dp"
                        android:paddingRight="6dp"
                        android:paddingTop="2dp"
                        android:paddingBottom="2dp"
                        android:background="@drawable/rounded_hollow_bg"/>

                </TableRow>

                <TableRow
                    android:layout_marginTop="2dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/to"
                        android:textSize="15sp"
                        android:gravity="right|end"
                        android:layout_marginRight="4dp"
                        android:layout_marginEnd="4dp"
                        android:fontFamily="sans-serif-medium"
                        android:textColor="@color/white"/>

                    <TextView
                        android:gravity="center"
                        android:id="@+id/to_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="Destination"
                        android:textSize="14sp"
                        android:paddingLeft="6dp"
                        android:paddingRight="6dp"
                        android:paddingTop="2dp"
                        android:paddingBottom="2dp"
                        android:background="@drawable/rounded_hollow_bg"/>
                </TableRow>

            </TableLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:background="@color/colorPrimary"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="top">

            <TextView
                android:layout_weight="0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remark"
                android:fontFamily="sans-serif-medium"
                android:layout_marginRight="8dp"
                android:layout_marginEnd="8dp"
                android:textColor="@color/white"/>
            <TextView
                android:layout_weight="1"
                android:id="@+id/remark_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Remark"
                android:layout_marginRight="16dp"
                android:layout_marginEnd="16dp"/>

            <TextView
                android:layout_weight="0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dispute"
                android:textSize="14sp"
                android:fontFamily="sans-serif-medium"
                android:textColor="@color/white"
                android:layout_marginRight="8dp"
                android:layout_marginEnd="8dp"
                android:gravity="end|right"/>

            <CheckBox
                android:id="@+id/dispute_checkbox"
                android:layout_weight="0"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>