<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="24dp"
    android:paddingBottom="8dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="24dp"
            android:paddingRight="24dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/shop_mark_dialog_coach_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:fontFamily="sans-serif-medium"
                    tools:text="Own Rly - Coach Type - Coach No"
                    android:textSize="@dimen/typography_title"/>

            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <TextView
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/shop_reason"
                    android:textSize="@dimen/typography_title"
                    android:fontFamily="sans-serif-medium"/>

                <Spinner
                    android:id="@+id/shop_reason_spinner"
                    android:layout_weight="0"
                    android:gravity="end|right"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <TextView
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/shop"
                    android:textSize="@dimen/typography_title"
                    android:fontFamily="sans-serif-medium"/>

                <Spinner
                    android:id="@+id/shop_spinner"
                    android:layout_weight="0"
                    android:gravity="end|right"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <TextView
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/marking_date"
                    android:textSize="@dimen/typography_title"
                    android:fontFamily="sans-serif-medium"/>

               <TextView
                   android:id="@+id/shop_marking_date_text_view"
                   android:layout_weight="0"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:textSize="@dimen/typography_title"
                   tools:text="26/06/2017"/>

            </LinearLayout>

            <TextView
                android:id="@+id/shop_error_message_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:visibility="gone"
                android:textColor="@color/colorPrimary"
                android:layout_marginTop="16dp"
                android:text="@string/fill_required_details"/>

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="end|right">

        <TextView
            android:id="@+id/shop_cancel_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/typography_body"
            android:fontFamily="sans-serif-medium"
            android:textColor="@color/colorAccent"
            android:text="@android:string/cancel"
            android:textAllCaps="true"
            android:padding="16dp"/>

        <TextView
            android:id="@+id/shop_confirm_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/typography_body"
            android:text="@string/confirm_arrival"
            android:textAllCaps="true"
            android:padding="16dp"
            android:fontFamily="sans-serif-medium"
            android:textColor="@color/colorAccent"/>

    </LinearLayout>

</LinearLayout>