<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android = "http://schemas.android.com/apk/res/android"
    android:layout_width = "match_parent"
    android:layout_height = "wrap_content"
    android:orientation = "vertical">
    <TextView
        android:layout_width = "wrap_content"
        android:layout_height = "wrap_content"
        android:padding = "@dimen/padding_default"
        android:text = "@string/select_picture"
        android:fontFamily="sans-serif-medium"
        android:textColor="@color/white"
        android:textSize = "@dimen/typography_title" />

    <LinearLayout
        android:id = "@+id/camera_linear_layout"
        android:layout_width = "match_parent"
        android:layout_height = "wrap_content"
        android:background = "?attr/selectableItemBackground"
        android:clickable = "true"
        android:gravity = "center_vertical"
        android:orientation = "horizontal"
        android:padding = "@dimen/padding_default">

        <ImageView
            android:layout_width = "24dp"
            android:layout_height = "24dp"
            android:layout_gravity = "center_vertical"
            android:alpha = "0.54"
            android:src = "@drawable/ic_camera"
            android:tint = "@color/white"
            android:layout_marginRight="32dp"
            android:layout_marginEnd="32dp"/>

        <TextView
            android:layout_width = "wrap_content"
            android:layout_height = "wrap_content"
            android:layout_gravity = "center_vertical"
            android:text = "@string/camera"
            android:textSize = "@dimen/typography_subheading" />

    </LinearLayout>

    <LinearLayout
        android:id = "@+id/gallery_linear_layout"
        android:layout_width = "match_parent"
        android:layout_height = "wrap_content"
        android:background = "?attr/selectableItemBackground"
        android:clickable = "true"
        android:gravity = "center_vertical"
        android:orientation = "horizontal"
        android:padding = "@dimen/padding_default">

        <ImageView
            android:layout_width = "24dp"
            android:layout_height = "24dp"
            android:layout_gravity = "center_vertical"
            android:alpha = "0.54"
            android:src = "@drawable/ic_gallery"
            android:tint = "@color/white"
            android:layout_marginRight="32dp"
            android:layout_marginEnd="32dp"/>

        <TextView
            android:layout_width = "wrap_content"
            android:layout_height = "wrap_content"
            android:layout_gravity = "center_vertical"
            android:text = "@string/gallery"
            android:textSize = "@dimen/typography_subheading" />


    </LinearLayout>

    <TextView
        android:id = "@+id/cancel_text_view"
        android:paddingRight="16dp"
        android:paddingLeft="16dp"
        android:paddingTop="8dp"
        android:paddingBottom="16dp"
        android:layout_width = "match_parent"
        android:layout_height = "wrap_content"
        android:text = "@android:string/no"
        android:textAllCaps="true"
        android:gravity = "end|right"
        android:textColor="@color/colorAccent"
        android:fontFamily="sans-serif-medium"
        android:textSize = "@dimen/typography_body" />

</LinearLayout>